--- a/project draft 1/Main/Home/HomeStoryboard.storyboard
+++ b/project draft 1/Main/Home/HomeStoryboard.storyboard
@@ -230,6 +230,9 @@
                                         <state key="normal" title="Continue Order ">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="continuebtn:" destination="6l7-eg-3aV" eventType="touchUpInside" id="n6Y-Lb-cTO"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l4f-i9-q8b">
                                         <rect key="frame" x="174" y="233" width="240" height="87"/>
@@ -241,6 +244,9 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="39"/>
                                         </state>
+                                        <connections>
+                                            <action selector="addcartbtn:" destination="6l7-eg-3aV" eventType="touchUpInside" id="WUo-zO-3Bw"/>
+                                        </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="j6E-4Y-dSA">
                                         <rect key="frame" x="47" y="10" width="163" height="127"/>
