--- a/project draft 1/Main/Cart/CartStoryboard.storyboard
+++ b/project draft 1/Main/Cart/CartStoryboard.storyboard
@@ -20,7 +20,7 @@
         <!--Cart View Controller-->
         <scene sceneID="Zwi-ON-HKm">
             <objects>
-                <viewController storyboardIdentifier="CartViewController" id="LC8-9n-Ydc" customClass="CartViewController" customModule="project_draft_1" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CartViewController" modalPresentationStyle="fullScreen" id="LC8-9n-Ydc" customClass="CartViewController" customModule="project_draft_1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nlm-Iq-BuD">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
