--- a/project draft 1/Main/Info/InfoStoryboard.storyboard
+++ b/project draft 1/Main/Info/InfoStoryboard.storyboard
@@ -122,12 +122,12 @@
                                             <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="37"/>
                                         </state>
                                     </button>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pic24" translatesAutoresizingMaskIntoConstraints="NO" id="F27-RZ-Hqf">
-                                        <rect key="frame" x="109" y="36" width="196" height="154"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="F27-RZ-Hqf">
+                                        <rect key="frame" x="97" y="36" width="218" height="185"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="32" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kfp-ZY-ecW">
-                                        <rect key="frame" x="306" y="245" width="38" height="36"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kfp-ZY-ecW">
+                                        <rect key="frame" x="306" y="245" width="21" height="36"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                         <color key="textColor" name="red"/>
@@ -142,6 +142,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
+                                            <action selector="logOUT:" destination="IOn-jP-8dj" eventType="touchUpInside" id="D9X-pV-meq"/>
                                             <segue destination="rJf-36-0Od" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="Da5-6z-aGB"/>
                                         </connections>
                                     </button>
@@ -154,6 +155,7 @@
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
+                                            <action selector="goBack:" destination="IOn-jP-8dj" eventType="touchUpInside" id="UVW-HQ-Wik"/>
                                             <segue destination="SpM-yx-mn2" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="s8n-1F-FPj"/>
                                         </connections>
                                     </button>
@@ -184,8 +186,8 @@
     <resources>
         <image name="bell" catalog="system" width="128" height="124"/>
         <image name="flame" catalog="system" width="108" height="128"/>
+        <image name="logo" width="1333.3333740234375" height="1333.3333740234375"/>
         <image name="person" catalog="system" width="128" height="117"/>
-        <image name="pic24" width="980" height="910"/>
         <image name="rectangle.and.pencil.and.ellipsis" catalog="system" width="128" height="81"/>
         <image name="tabBarItem:eav-WQ-fl0:image" width="128" height="121">
             <mutableData key="keyedArchiveRepresentation">
