--- a/project draft 1/Main/Home/HomeStoryboard.storyboard
+++ b/project draft 1/Main/Home/HomeStoryboard.storyboard
@@ -20,14 +20,12 @@
             <point key="canvasLocation" x="-654" y="-104"/>
         </scene>
         <!--CartStoryboard-->
-        <scene sceneID="KnW-7S-gb9">
+        <scene sceneID="kuC-6m-zWp">
             <objects>
-                <viewControllerPlaceholder storyboardName="CartStoryboard" id="PVW-Ts-Goh" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="41F-nP-UHu"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Uff-XO-4rI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewControllerPlaceholder storyboardName="CartStoryboard" id="TCw-ph-dgl" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SX3-hA-5q9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-764" y="-27"/>
+            <point key="canvasLocation" x="-412" y="388"/>
         </scene>
         <!--Home View Controller-->
         <scene sceneID="z70-M9-8Z1">
@@ -62,7 +60,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gh2-gg-ghf">
-                                                    <rect key="frame" x="0.0" y="11" width="127" height="158"/>
+                                                    <rect key="frame" x="0.0" y="11" width="127" height="116"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
@@ -97,7 +95,7 @@
                                 </state>
                                 <connections>
                                     <action selector="gotocart:" destination="EaQ-rQ-6Qc" eventType="touchUpInside" id="NfP-or-9TV"/>
-                                    <segue destination="PVW-Ts-Goh" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="ie0-D2-T3s"/>
+                                    <segue destination="TCw-ph-dgl" kind="presentation" id="vMp-SH-MT3"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vbg-um-UJu">
@@ -139,6 +137,7 @@
                                 </state>
                                 <connections>
                                     <action selector="gotoCart:" destination="EaQ-rQ-6Qc" eventType="touchUpInside" id="xYw-gP-7yb"/>
+                                    <segue destination="TCw-ph-dgl" kind="presentation" id="wvV-cp-rs2"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Main Dishes" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mpD-lS-Nf4">
@@ -198,19 +197,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="i96-fe-un9">
-                                <rect key="frame" x="0.0" y="575" width="414" height="321"/>
+                            <view contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="i96-fe-un9">
+                                <rect key="frame" x="0.0" y="494" width="414" height="402"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hoy-cg-WOi">
-                                        <rect key="frame" x="225" y="6" width="143" height="129"/>
+                                        <rect key="frame" x="203" y="8" width="176" height="129"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="46"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BxM-5s-msU">
-                                        <rect key="frame" x="242" y="165" width="87" height="48"/>
+                                        <rect key="frame" x="244" y="165" width="87" height="48"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                         <color key="textColor" name="red"/>
@@ -257,7 +256,7 @@
                                         </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="j6E-4Y-dSA">
-                                        <rect key="frame" x="47" y="10" width="163" height="127"/>
+                                        <rect key="frame" x="27" y="12" width="163" height="127"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sqb-Mb-dx9">
@@ -280,6 +279,13 @@
                                             <action selector="stepper:" destination="6l7-eg-3aV" eventType="valueChanged" id="EfG-um-Zaa"/>
                                         </connections>
                                     </stepper>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GaC-ti-vBX">
+                                        <rect key="frame" x="211" y="165" width="25" height="48"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                        <color key="textColor" name="red"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
@@ -303,6 +309,9 @@
             <point key="canvasLocation" x="795.6521739130435" y="49.553571428571423"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="wvV-cp-rs2"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="cart.fill" catalog="system" width="128" height="102"/>
         <image name="heart" catalog="system" width="128" height="109"/>
