--- a/project draft 1/Main/Welcome/WelcomeStoryboard.storyboard
+++ b/project draft 1/Main/Welcome/WelcomeStoryboard.storyboard
@@ -29,7 +29,7 @@
         <!--Welcome View Controller-->
         <scene sceneID="uxY-j3-OMh">
             <objects>
-                <viewController storyboardIdentifier="WelcomeViewController" id="Iwf-gg-XSL" customClass="WelcomeViewController" customModule="project_draft_1" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WelcomeViewController" modalPresentationStyle="fullScreen" id="Iwf-gg-XSL" customClass="WelcomeViewController" customModule="project_draft_1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jyW-cm-B1m">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
