--- a/project draft 1/Main/Home/HomeStoryboard.storyboard
+++ b/project draft 1/Main/Home/HomeStoryboard.storyboard
@@ -19,14 +19,6 @@
             </objects>
             <point key="canvasLocation" x="-654" y="-104"/>
         </scene>
-        <!--CartStoryboard-->
-        <scene sceneID="kuC-6m-zWp">
-            <objects>
-                <viewControllerPlaceholder storyboardName="CartStoryboard" id="TCw-ph-dgl" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="SX3-hA-5q9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-412" y="388"/>
-        </scene>
         <!--Home View Controller-->
         <scene sceneID="z70-M9-8Z1">
             <objects>
@@ -47,23 +39,17 @@
                                     <segue destination="4kp-sj-fPM" kind="presentation" modalPresentationStyle="fullScreen" modalTransitionStyle="crossDissolve" id="ggg-sR-Ae7"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="IF9-NL-ePg">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="IF9-NL-ePg" customClass="HomeTableView">
                                 <rect key="frame" x="0.0" y="157" width="127" height="743"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="maincell" rowHeight="127" id="qRP-vn-mJF">
-                                        <rect key="frame" x="0.0" y="28" width="127" height="127"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="maincell" rowHeight="278" id="qRP-vn-mJF" customClass="HomeTableViewCell" customModule="project_draft_1" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="127" height="278"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qRP-vn-mJF" id="key-Ap-ozB">
-                                            <rect key="frame" x="0.0" y="0.0" width="127" height="127"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="127" height="278"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gh2-gg-ghf">
-                                                    <rect key="frame" x="0.0" y="11" width="127" height="116"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                </imageView>
-                                            </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
@@ -94,8 +80,7 @@
                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="35"/>
                                 </state>
                                 <connections>
-                                    <action selector="gotocart:" destination="EaQ-rQ-6Qc" eventType="touchUpInside" id="NfP-or-9TV"/>
-                                    <segue destination="TCw-ph-dgl" kind="presentation" id="vMp-SH-MT3"/>
+                                    <action selector="gotoCart:" destination="EaQ-rQ-6Qc" eventType="touchUpInside" id="aUJ-tt-2th"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vbg-um-UJu">
@@ -136,8 +121,7 @@
                                     <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="36"/>
                                 </state>
                                 <connections>
-                                    <action selector="gotoCart:" destination="EaQ-rQ-6Qc" eventType="touchUpInside" id="xYw-gP-7yb"/>
-                                    <segue destination="TCw-ph-dgl" kind="presentation" id="wvV-cp-rs2"/>
+                                    <action selector="gotocart:" destination="EaQ-rQ-6Qc" eventType="touchUpInside" id="rjG-kI-IZe"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Main Dishes" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mpD-lS-Nf4">
@@ -178,7 +162,7 @@
                     </view>
                     <connections>
                         <outlet property="descriptiontxt" destination="5f4-eN-Zdr" id="mDq-ae-m7I"/>
-                        <outlet property="gotocartbtn" destination="oQv-nf-URS" id="9tH-Uc-5kq"/>
+                        <outlet property="gotocartbtn" destination="oQv-nf-URS" id="RxP-v9-BAr"/>
                         <outlet property="img" destination="b6T-eB-lDc" id="m27-nU-25f"/>
                         <outlet property="maintabel" destination="IF9-NL-ePg" id="XEK-dc-Sis"/>
                         <outlet property="nametxt" destination="bWb-fJ-ILI" id="rHa-lf-xmv"/>
@@ -309,9 +293,6 @@
             <point key="canvasLocation" x="795.6521739130435" y="49.553571428571423"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="wvV-cp-rs2"/>
-    </inferredMetricsTieBreakers>
     <resources>
         <image name="cart.fill" catalog="system" width="128" height="102"/>
         <image name="heart" catalog="system" width="128" height="109"/>
